base/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-svc
  namespace: nine
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: ninekube
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dex
  ports:
    - name: https
      port: 5556
      targetPort: https
    - name: grpc
      port: 5557
      targetPort: grpc
