base/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: nine
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: ninekube
  annotations:
    cert-manager.io/cluster-issuer: ""
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dex.nine.local
      secretName: dex-tls
  rules:
    - host: dex.nine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex-svc
                port:
                  number: 5556
