base/dex/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dex
  namespace: nine
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`dex.nine.local`)
      services:
        - name: dex-svc
          port: 5556
  tls:
    passthrough: true
